parser tweaks & docs site dark mode error ui font color fix

--- a/src/SCFirstOrderLogic.Documentation/wwwroot/app.css
+++ b/src/SCFirstOrderLogic.Documentation/wwwroot/app.css
@@ -131,22 +131,23 @@ a, .btn-link {
 }
 
 #blazor-error-ui {
-    background: lightyellow;
-    bottom: 0;
-    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     display: none;
-    left: 0;
-    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
     position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
     z-index: 1000;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    background: lightyellow;
+    color: black;
+    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
 }
 
 #blazor-error-ui .dismiss {
-    cursor: pointer;
     position: absolute;
     right: 0.75rem;
     top: 0.5rem;
+    cursor: pointer;
 }
 
 .blazor-error-boundary {
